Main Website Update

--- a/style.css
+++ b/style.css
@@ -1,36 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body{
+  min-height: 100vh;
   font-family: Roboto;
   margin: 0px;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .header{
   background-color: #1F2937;
   color: white;
   padding: 0px 100px 0px 100px;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header ul{
+  list-style-type: none;
+}
+
+.header li{
+  display: inline;
+  padding: 10px;
 }
 
 .hero{
  background-color: #1F2937;
  color: white;
- flex: 1;
+ display: flex;
+ gap: 30px;
+ padding: 50px 100px 50px 100px;
+ justify-content: space-between;
+ align-items: center;
+}
+
+button{
+  background-color: #3882F6;
+  color: white;
+  font-size: 12pt;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
 
 .random-bar{
-  flex: 1;
+  height: auto;
+  text-align: center;
+  padding: 50px 0px 50px 0px;
+}
 
+.card-body{
+  padding: 15px 150px 0px 150px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.random-card{
+  width: 100px;
+}
+
+.random-head{
+  font-weight: bold;
+  font-size: 15pt;
+  padding-bottom: 15px;
+}
+
+.random-box{
+  height: 100px;
+  width: 100px;
+  border: 2px solid #3882F6;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.random-subtext{
+  font-size: 10px;
+  font-style: italic;
 }
 
 .quote-bar{
   background-color: #E5E7EB;
-  flex: 1;
+  padding: 50px 200px 50px 200px;
+  Font-size: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-.cta-bar{
-  flex: 1;
+.quote-bar .signature{
+  display: flex;
+  flex-direction: row;
+  align-content: end;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 15px;
+}
+
+.cta-banner{
+  height: auto;
+}
+
+.cta-card{
+  border: 2px solid #3882F6;
+  border-radius: 10px;
+  background-color: #3882F6;
+  color: white;
+  margin: 50px 100px 50px 100px;
+  padding-left: 50px;
+  padding-right: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cta-banner button{
+  border: 2px solid white;
+  background-color: #3882F6;
 }
 
 .footer{
@@ -38,6 +132,5 @@ body{
   padding: 15px 100px 15px 100px;
   color: white;
   text-align: center;
-  flex: 1;
+  flex-grow: 0;
 }
-
